[client] fix for java 8 compatibility